# PySurfSim

./: .gitattributes  .gitignore  CHANGELOG  Pipfile  README.md  pyproject.toml  setup.cfg
PySurfSim/: __init__.py  applyMeshToolToWorkpiece.py  applyToolPassWithOffset.py  apply_mesh_tool_to_workpiece.py  combineSurface.py  combine_surface.py  exportSurface.py  export_surface.py  genSurfaceMesh.py  genToolMeshWithOffsets.py  gen_surface_mesh.py  gen_tool_mesh_with_offsets.py  getToolFootprint.py  helpers.py  meshToolFlyCut.py  meshToolFlyCutClass.py  mesh_tool_fly_cut.py  sliceSurface.py  slice_surface.py
PySurfSim/legacy/: __init__.py
PySurfSim_Tests/: template.py  test_integration_applyMeshToolToWorkpiece.py  test_integration_apply_mesh_tool_to_workpiece.py  test_integration_parallel_processing.py  test_integration_surface_slicing.py  test_template.py  test_unit_combineSurface.py  test_unit_combine_surface.py  test_unit_exportSurface.py  test_unit_export_surface.py  test_unit_genSurfaceMesh.py  test_unit_gen_surface_mesh.py  test_unit_meshToolFlyCut.py  test_unit_mesh_tool_fly_cut.py  test_unit_sliceSurface.py  test_unit_slice_surface.py  visual_apply_mesh_tool_to_workpiece.py  visual_apply_mesh_tool_to_workpiece_matplotlib  visual_apply_mesh_tool_to_workpiece_matplotlib.py
PySurfSim_Tests/integration/: test_applyMeshToolToWorkpiece.py  test_parallel_processing.py  test_surface_slicing.py
PySurfSim_Tests/unit/: test_applyMeshToolToWorkpiece.py  test_combineSurface.py  test_exportSurface.py  test_genSurfaceMesh.py  test_getToolFootprint.py  test_meshToolFlyCut.py  (+1 more)
