[metadata]
name = PySurfSim
version = 1.0.0
author = L. Schoenemann
author_email = schoenemann@iwt.uni-bremen.de
description = Ultra-precision surface simulation framework
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
license_files = file: LICENSE

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
