[metadata]
name = PySurfSim
author = L. Schoenemann
author_email = schoenemann@iwt.uni-bremen.de
description = Ultra-precision surface simulation framework
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
license_files = file: LICENSE

[options]
use_scm_version = True
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
	pandas
	joblib
	mayavi
	PyQt5
